# cpp-tetris

./: .clang-format  .gitignore  .gitpod.yml  .replit  CMakeLists.txt  LICENSE.md  main  makefile
.github/: PULL_REQUEST_TEMPLATE.md  lgtm.yml
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake
src/: defines.hpp  figure.cpp  figure.hpp  figureTypes.cpp  figureTypes.hpp  main.cpp  netris.cpp
src/controllers/: gameController.cpp  gameController.hpp  graphicsController.cpp  graphicsController.hpp  inputController.cpp  inputController.hpp  masterController.cpp  masterController.hpp
tests/: CMakeLists.txt  sanity.cpp
